src/tess/tl/test/fail/test_fail_ufcs_wrong_arg_type.tl
#module main
#import <Array.tl>

main() {
    arr := Array.empty[Int]()
    arr.push(c"hello")                   // type error: String vs Int
    0
}
